some quick fixes to text size within buckets to prevent words from spilling over

--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
   width: 20%;
   min-width: 50px;
   background-color: lightblue;
-  margin: 5%
+  margin: 5%;
+  overflow: hidden;
+  white-space: pre-wrap;
 }
 
 .hide{
@@ -31,4 +33,8 @@
 
 .container {
   padding-top: 150px;
+}
+
+.bucket p {
+  font-size: .75em;
 }
